<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/logback">

    <RelativeLayout
        android:layout_width="380dp"
        android:layout_height="400dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="155dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/usernameLog"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:singleLine="true"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:inputType="text"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            tools:ignore="Autofill" />


        <EditText
            android:id="@+id/passwordLog"
            android:layout_width="300sp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:layout_below="@id/usernameLog"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@id/passwordLog"
            />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_signup"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_below="@id/loginBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>